--- a/typedb-src/modules/ROOT/partials/nav-root.adoc
+++ b/typedb-src/modules/ROOT/partials/nav-root.adoc
@@ -1,4 +1,5 @@
-* xref:typedb::documentation-overview.adoc[Documentation overview]
-* xref:typedb::introduction.adoc[What is TypeDB]
-* xref:typedb::quickstart-guide.adoc[]
-* xref:typedb:resources:releases.adoc[Downloads center]
+* xref:typedb::home/documentation-overview.adoc[]
+* xref:typedb::home/what-is-typedb.adoc[]
+* xref:typedb::home/quickstart-guide.adoc[]
+* xref:typedb::home/20-queries.adoc[]
+* xref:typedb:resources:download-center.adoc[]
