--- a/typedb-src/modules/ROOT/pages/install-and-run.adoc
+++ b/typedb-src/modules/ROOT/pages/install-and-run.adoc
@@ -142,11 +142,11 @@ include::partial$macos.adoc[tag=stop]
 
 === After installation
 
-After the first installation of TypeDB, we recommend using our xref:quickstart-guide.adoc[Quickstart guide]
+After the first installation of TypeDB, we recommend using our xref:home/quickstart-guide.adoc[Quickstart guide]
 to set up a database and to try different types of queries.
 
 Alternatively, any other xref:clients:ROOT:clients.adoc[TypeDB Client] can be used to connect to a TypeDB server.
 
-To find out only essential information about TypeDB, check the xref:development/learn-basics.adoc[] page.
+To find out only essential information about TypeDB, check the xref:basics/basics.adoc[] page.
 
 To learn more about connecting to TypeDB and querying it, see the *Developing with TypeDB* section.
