--- a/typedb-src/modules/ROOT/partials/nav.adoc
+++ b/typedb-src/modules/ROOT/partials/nav.adoc
@@ -1,24 +1,21 @@
 .TypeDB
-* xref:typedb::overview.adoc[TypeDB overview]
-* xref:typedb::introduction.adoc[]
+* xref:typedb::overview.adoc[]
+//* xref:typedb::introduction.adoc[]
 * xref:typedb::install-and-run.adoc[]
-//* xref:typedb::basics.adoc[Basics]
-* Basics
-** xref:typedb::basics/client-server-architecture.adoc[Client-server architecture]
-** xref:typedb::basics/database.adoc[Database]
-** xref:typedb::basics/type-system.adoc[Type system]
+//* Basics
+//** xref:typedb::basics/basics.adoc[]
+* xref:typedb::basics/basics.adoc[]
+// tag::basics[]
+** xref:typedb::basics/connection.adoc[]
+//** xref:typedb::basics/database.adoc[Database]
 ** xref:typedb::basics/transactions.adoc[Transactions]
-** xref:typedb::basics/query-types.adoc[Query types]
+** xref:typedb::basics/query-types.adoc[Queries]
+** xref:typedb::basics/type-system.adoc[Type system]
 ** xref:typedb::basics/acid-guarantees.adoc[]
-//* xref:typedb::philosophy.adoc[Philosophy]
-* Philosophy
-** xref:typedb::philosophy/polymorhic-database.adoc[Polymorphic database]
-** xref:typedb::philosophy/polymorhic-database.adoc[Polymorphic database2]
-** xref:typedb::philosophy/polymorhic-database.adoc[Polymorphic database3]
-** xref:typedb::philosophy/polymorhic-database.adoc[Polymorphic database4]
+// end::basics[]
 //* xref:typeql::overview.adoc[Developing with TypeDB]
 * Developing with TypeDB
-** xref:typedb::development/connect.adoc[Send query]
+** xref:typedb::development/send-queries.adoc[]
 ** xref:typedb::development/define-schema.adoc[]
 ** xref:typedb::development/write-data.adoc[]
 ** xref:typedb::development/read-data.adoc[]
@@ -28,8 +25,8 @@
 * Managing TypeDB
 ** xref:typedb::managing-typedb/configuration.adoc[]
 ** xref:typedb::managing-typedb/configuration.adoc[Logs]
-** xref:typedb::managing-typedb/user-management.adoc[Users]
-** xref:typedb::managing-typedb/version-update.adoc[Upgrading]
+** xref:typedb::managing-typedb/users.adoc[Users]
+** xref:typedb::managing-typedb/upgrading.adoc[Upgrading]
 //** xref:managing-typedb/export-import.adoc[]
 ** xref:typedb::managing-typedb/high-availability.adoc[]
 ** xref:typedb::managing-typedb/security.adoc[]
