--- a/typeql-src/modules/ROOT/pages/fundamentals.adoc
+++ b/typeql-src/modules/ROOT/pages/fundamentals.adoc
@@ -292,7 +292,7 @@ image::thing-era-role-rule.png[Types hierarchy]
 
 // #todo Redraw the diagram. Without the Thing. Consider using PlantUML
 
-include::typedb:ROOT:quickstart-guide.adoc[tag=thing_deprecation]
+include::typedb:ROOT:home/quickstart-guide.adoc[tag=thing_deprecation]
 // end::thing_type_basics[]
 
 [#_entity_types]
