--- a/typeql-src/modules/ROOT/pages/schema/define-types.adoc
+++ b/typeql-src/modules/ROOT/pages/schema/define-types.adoc
@@ -153,7 +153,7 @@ group-membership sub membership,
 ----
 
 The above example can be run in xref:clients:ROOT:studio.adoc[TypeDB Studio]. See the
-xref:typedb:ROOT:quickstart-guide.adoc[Quickstart guide] for full descriptions of the following steps:
+xref:typedb:ROOT:home/quickstart-guide.adoc[Quickstart guide] for full descriptions of the following steps:
 
 . Make sure a TypeDB server is up.
 . Start TypeDB Studio.
@@ -182,7 +182,7 @@ As the result of the above query TypeDB Studio should display a graph visualizat
 
 image::schema-example-1.png[Schema visualization example]
 
-include::typedb:ROOT:quickstart-guide.adoc[tag=thing_deprecation]
+include::typedb:ROOT:home/quickstart-guide.adoc[tag=thing_deprecation]
 
 In the following sections, we can find more detailed information on different schema definition queries and
 possibilities.
